manifests/gateway/virtualservices.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: platform-routing
  namespace: istio-system
spec:
  hosts:
    - "argocd.136.115.108.14.nip.io"
    - "grafana.136.115.108.14.nip.io"
    - "nexus.136.115.108.14.nip.io"
  gateways:
    - istio-system/platform-gateway
  http:
    # 1. ArgoCD Route
    - match:
        - headers:
            host:
              exact: "argocd.136.115.108.14.nip.io"
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80

    # 2. Grafana Route
    - match:
        - headers:
            host:
              exact: "grafana.136.115.108.14.nip.io"
      route:
        - destination:
            host: monitoring-grafana.monitoring.svc.cluster.local
            port:
              number: 80

    # 3. Nexus Route
    - match:
        - headers:
            host:
              exact: "nexus.136.115.108.14.nip.io"
      route:
        - destination:
            host: nexus-nexus-repository-manager.nexus.svc.cluster.local
            port:
              number: 8081
